# hometask

./: .gitignore
appheatmap/: valuesBuilder.cpp  valuesBuilder.h
popov_d_d/prj/StackT/StackT/: ArrStackT.cpp  ArrStackT.h  ArrStackTtest.cpp  StackT.vcxproj  StackT.vcxproj.filters
popov_d_d/prj/appheatmap/appheatmap/: CMakeLists.txt  ReadMe.txt  appheatmap.cpp  appheatmap.vcxproj  appheatmap.vcxproj.filters  heatmapBuilder.cpp  heatmapBuilder.h  heatmaptypes.h  palette.txt  paletteManager.cpp  paletteManager.h  resource.h  valuesBuilder.cpp  valuesBuilder.h
popov_d_d/prj/arrstack/: CMakeLists.txt  arrstack.cpp  arrstack.h  arrstacktest.cpp
popov_d_d/prj/arrstack/arrstack/: arrstack.vcxproj  arrstack.vcxproj.filters
popov_d_d/prj/complex/: Complex.cpp  complex.h  complex.vcxproj  complex.vcxproj.filters  complextest.cpp  сomplex.cpp
popov_d_d/prj/lststack/: CMakeLists.txt
popov_d_d/prj/lststack/lststack/: lststack.cpp  lststack.h  lststack.vcxproj  lststack.vcxproj.filters  lststacktest.cpp
popov_d_d/prj/nod/nod/: nod.cpp
popov_d_d/prj/rational2/rational2/: Source.cpp  rational.cpp  rational.h  rational2.vcxproj  rational2.vcxproj.filters  testrational.cpp
popov_d_d/prj/vec2d/vec2d/: vec2d.cpp  vec2d.h  vec2d.vcxproj  vec2d.vcxproj.filters  vec2dtest.cpp
popov_d_d/prj/vector/vector/: vector.cpp  vector.h  vector.vcxproj  vector.vcxproj.filters  vectortest.cpp
popov_d_d/prj/Проект1/Проект1/: Source.cpp  Проект1.vcxproj
prj/nod/nod/nod/: Source.cpp  nod.vcxproj
prj/popov_d_d/prj/nod/: Source.cpp
(+2 files in other folders)
